# strategy-manifold

./: README.md  manifold.json  pyproject.toml
scripts/: fig_cluster_sizes.py  manifold.py
tests/: test_smoke.py
