[project]
name = "strategy-manifold"
version = "0.1.0"
description = "Low-dimensional embedding of strategy populations: do robust strategies cluster, and is the robust region connected or fragmented?"
authors = [{ name = "Daniel Vieira Gatto" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "umap-learn>=0.5",
  "pyarrow>=14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
